@@ -157,8 +157,10 @@
 
 
       /* ignore most of upper bits until 2176 and adjust epoch */
-      created  += head->Created [0] == 1 ? 2212122496 : -2082844800;
-      modified += head->Modified[0] == 1 ? 2212122496 : -2082844800;
+      created  = head->Created [0] == 1 ? created  + 2212122496
+	                                : created  - 2082844800;
+      modified = head->Modified[0] == 1 ? modified + 2212122496
+	                                : modified - 2082844800;
 
       strftime( buf, sizeof ( buf ), "%Y-%m-%d", gmtime( &created  ) );
       printf( "%s%s\n", Name_Field( "created" ), buf );
@@ -168,7 +170,6 @@
       printf( "%s%.2f\n", Name_Field( "revision" ),
               head->Font_Revision / 65536.0 );
     }
-
   }
 
 
